Easier switch base <-> bonus version + fix logo spacing (margin) in header

--- a/css/css-base.css
+++ b/css/css-base.css
@@ -10,6 +10,10 @@ header{
     background-size: 35%;
 }
 
+.logo{
+    margin-left: 80%;
+}
+
 main{
     margin: 5px;
 }
