--- a/css/css-bonus.css
+++ b/css/css-bonus.css
@@ -10,6 +10,11 @@ header{
     background-size: 35%;
 }
 
+header>img{
+    margin-left: 10%;
+}
+
+
 main{
     width: 80%;
     margin: auto;
